syntax = "proto3";

option go_package = "github.com/twsnmp/twlogeye/api";

package twlogeye;

service TWLogEyeService {
	// Stop
	rpc Stop (Empty) returns (ControlResponse); 
	// Reload sigma rules
	rpc Reload (Empty) returns (ControlResponse); 
  // ClearDB
	rpc ClearDB (ClearRequest) returns (ControlResponse);
	// Watch Notify
	rpc WatchNotify (Empty) returns (stream NotifyResponse);
	// Search Notify
	rpc SearchNotify (NofifyRequest) returns (stream NotifyResponse);
  // Search Log
	rpc SearchLog (LogRequest) returns (stream LogResponse);
  // Get Syslog Report
	rpc GetSyslogReport (ReportRequest) returns (stream SyslogReportEnt);
  // Get Last Syslog Report
	rpc GetLastSyslogReport (Empty) returns (SyslogReportEnt);
  // Get Trap Report
	rpc GetTrapReport (ReportRequest) returns (stream TrapReportEnt);
  // Get Last Trap Report
	rpc GetLastTrapReport (Empty) returns (TrapReportEnt);
  // Get Netflow Report
	rpc GetNetflowReport (ReportRequest) returns (stream NetflowReportEnt);
  // Get Last Netflow Report
	rpc GetLastNetflowReport (Empty) returns (NetflowReportEnt);
  // Get Windows Event Report
	rpc GetWindowsEventReport (ReportRequest) returns (stream WindowsEventReportEnt);
  // Get Last Windows Event Report
	rpc GetLastWindowsEventReport (Empty) returns (WindowsEventReportEnt);
  // Get OpenTelemetry Report
	rpc GetOTelReport (ReportRequest) returns (stream OTelReportEnt);
  // Get Last OpenTelemetry Report
	rpc GetLastOTelReport (Empty) returns (OTelReportEnt);
  // Get MQTT Report
	rpc GetMqttReport (ReportRequest) returns (stream MqttReportEnt);
  // Get Last MQTT Report
	rpc GetLastMqttReport (Empty) returns (MqttReportEnt);
  // Get Anomaly Report
	rpc GetAnomalyReport (AnomalyReportRequest) returns (stream AnomalyReportEnt);
  // Get Last Anomaly Report
	rpc GetLastAnomalyReport (Empty) returns (LastAnomalyReportEnt);
  // Get Monitor Report
	rpc GetMonitorReport (ReportRequest) returns (stream MonitorReportEnt);
  // Get Last Monitor Report
	rpc GetLastMonitorReport (Empty) returns (MonitorReportEnt);
  // Get OpenTelemetry Metric List
	rpc GetOTelMetricList (Empty) returns (stream OTelMetricListEnt);
  // Get OpenTelemetry Metric
  rpc GetOTelMetric (IDRequest) returns (OTelMetricEnt);
  // Get OpenTelemetry Trace List
	rpc GetOTelTraceList (Empty) returns (stream OTelTraceListEnt); 
  // Get OpenTelemetry Trace
  rpc GetOTelTrace (IDRequest) returns (OTelTraceEnt);
}

message NofifyRequest {
	int64 start = 1;
	int64 end = 2;
	string level = 3;
}

message NotifyResponse {
	int64 time = 1;
	string id = 2;
	string level = 3;
	string title = 4;
	string tags = 5;
  string src = 6;
  string log = 7;
}

message LogRequest {
	int64 start = 1;
	int64 end = 2;
  string logtype = 3;
	string search = 4;
}

message LogResponse {
	int64 time = 1;
  string src = 3;
	string log = 4;
}

message ControlResponse {
  bool   ok   = 1;
	string message = 2;
}

message Empty {}

message IDRequest {
  string id = 1;
}


// Report

message ReportRequest {
	int64 start = 1;
	int64 end = 2;
}

message LogSummaryEnt {
  string log_pattern = 1;
  int32 count = 2;
}

message SyslogReportEnt {
  int64 time = 1;
  int32 normal = 2;
  int32 warn = 3;
  int32 error = 4;
  int32 patterns = 5;
  int32 err_patterns = 6;
  repeated LogSummaryEnt top_list = 7;
  repeated LogSummaryEnt top_error_list = 8;
}

message TrapSummaryEnt {
  string sender = 1;
  string trap_type = 2;
  int32 count = 3;
}

message TrapReportEnt {
  int64 time = 1;
  int32 count = 2;
  int32 types = 3;
  repeated TrapSummaryEnt top_list = 4;
}

message NetflowPacketsSummaryEnt {
  string key = 1;
  int32 packets = 2;
}

message NetflowBytesSummaryEnt {
  string key = 1;
  int64 bytes = 2;
}

message NetflowKeyCountEnt {
  string key = 1;
  int32 count = 2;
}

message NetflowReportEnt {
  int64 time = 1;
  int64 packets = 2;
  int64 bytes = 3;
  int32 macs = 4;
  int32 ips = 5;
  int32 flows = 6;
  int32 protocols = 7;
  int32 fumbles = 8;
  int32 hosts = 9;
  int32 locs = 10;
  int32 country = 11;
  repeated NetflowPacketsSummaryEnt top_mac_packets_list = 12;
  repeated NetflowBytesSummaryEnt top_mac_bytes_list = 13;
  repeated NetflowPacketsSummaryEnt top_ip_packets_list = 14;
  repeated NetflowBytesSummaryEnt top_ip_bytes_list = 15;
  repeated NetflowPacketsSummaryEnt top_flow_packets_list = 16;
  repeated NetflowBytesSummaryEnt top_flow_bytes_list = 17;
  repeated NetflowKeyCountEnt top_protocol_list = 18;
  repeated NetflowKeyCountEnt top_fumble_src_list = 19;
  repeated NetflowKeyCountEnt top_host_list = 20;
  repeated NetflowKeyCountEnt top_loc_list = 21;
  repeated NetflowKeyCountEnt top_country_list = 22;
}


message WindowsEventSummary {
  string computer = 1;
  string provider = 2;
  string event_id = 3;
  int32 count = 4;
}

message WindowsEventReportEnt {
  int64 time = 1;
  int32 normal = 2;
  int32 warn = 3;
  int32 error = 4;
  int32 types = 5;
  int32 error_types = 6;
  repeated WindowsEventSummary top_list = 7;
  repeated WindowsEventSummary top_error_list = 8;
}

message OTelSummaryEnt {
  string host = 1;
  string service = 2;
  string scope = 3;
  string severity = 4;
  int32 count = 5;
}

message OTelReportEnt {
  int64 time = 1;
  int32 normal = 2;
  int32 warn = 3;
  int32 error = 4;
  int32 types = 5;
  int32 error_types = 6;
  repeated OTelSummaryEnt top_list = 7;
  repeated OTelSummaryEnt top_error_list = 8;
  int32 hosts = 9;
  int32 trace_ids = 10;
  int32 trace_count = 11;
  int32 merics_count = 12;
}

message MqttSummaryEnt {
  string client_id = 1;
  string topic = 2;
  int32 count = 3;
}

message MqttReportEnt {
  int64 time = 1;
  int32 count = 2;
  int32 types = 3;
  repeated MqttSummaryEnt top_list = 4;
}

message AnomalyReportRequest {
  int64 start = 1;
	int64 end = 2;
  string type = 3;
}

message AnomalyReportEnt {
  int64 time = 1;
  double score = 2;
}

message LastAnomalyReportScore {
  string type = 1;
  int64 time = 2;
  double score = 3;
}

message LastAnomalyReportEnt {
  int64 time = 1;
  repeated LastAnomalyReportScore score_list = 2;
}


message MonitorReportEnt {
  int64 time = 1;
  double cpu = 2;
  double memory = 3;
  double load = 4;
  double disk = 5;
  double net = 6;
  int64 bytes = 7;
  double db_speed = 8;
  int64 db_size = 9;
}

message ClearRequest {
	string type = 1;
	string subtype = 2;
}

message OTelMetricDataPointEnt {
  int64 start = 1;
  int64 time = 2;
  repeated string attributes = 3;

  // Histogram Fields
  uint64 count = 4;
  repeated uint64 bucket_counts = 5;
  repeated double explicit_bounds = 6;
  double sum = 7;
  double min = 8;
  double max = 9;

  // Gauge Fields
  double gauge = 10;

  // ExponentialHistogram Fields
  repeated uint64 positive = 11;
  repeated uint64 negative = 12;
  int64 scale = 13;
  int64 zero_count = 14;
  double zero_threshold = 15;  
}

message OTelMetricEnt {
  string host = 1;
  string service = 2;
  string scope = 3;
  string name = 4;
  string type = 5;
  string description = 6;
  string unit = 7;
  repeated OTelMetricDataPointEnt data_points = 8;
  int32 count = 9;
  int64 first = 10;
  int64 last = 11;
}

message OTelMetricListEnt {
  string id = 1;
  string host = 2;
  string service = 3;
  string scope = 4;
  string name = 5;
  string type = 6;
  string description = 7;
  string unit = 8;
  int32 count = 9;
  int64 first = 10;
  int64 last = 11;
}

message OTelTraceSpanEnt {
  string span_id = 1;
  string parent_span_id = 2;
  string host = 3;
  string service = 4;
  string scope = 5;
  string name = 6;
  int64 start = 7;
  int64 end = 8;
  double dur = 9;
  repeated string attributes = 10;
}

message OTelTraceEnt {
  string trace_id = 1;
  int64 start = 2;
  int64 end = 3;
  double dur = 4;
  repeated OTelTraceSpanEnt spans = 5;
  int64 last = 6;
}

message OTelTraceListEnt {
  string trace_id = 1;
  int64 start = 2;
  int64 end = 3;
  double dur = 4;
  int64 last = 5;
}

/*
protoc --go_out=. --go_opt=paths=source_relative \
	--go-grpc_out=. --go-grpc_opt=paths=source_relative \
	twlogeye.proto
*/